logs_inference_rois/inference_roi_32.log
[KeOps] Compiling cuda jit compiler engine ... 
[KeOps] Warning : There were warnings or errors compiling formula :
In file included from /home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/binders/nvrtc/nvrtc_jit.cpp:21:0:
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/binders/nvrtc/nvrtc_jit.cpp: In function ‘int Compile(const char*, const char*, int, int, const char*)’:
<command-line>:0:20: error: ‘nvrtcGetCUBINSize’ was not declared in this scope
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/include/utils_pe.h:6:26: note: in definition of macro ‘NVRTC_SAFE_CALL’
     nvrtcResult result = x;                                       \
                          ^
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/binders/nvrtc/nvrtc_jit.cpp:90:21: note: in expansion of macro ‘nvrtcGetTARGETSize’
     NVRTC_SAFE_CALL(nvrtcGetTARGETSize(prog, &targetSize));
                     ^~~~~~~~~~~~~~~~~~
<command-line>:0:20: note: suggested alternative: ‘nvrtcGetPTXSize’
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/include/utils_pe.h:6:26: note: in definition of macro ‘NVRTC_SAFE_CALL’
     nvrtcResult result = x;                                       \
                          ^
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/binders/nvrtc/nvrtc_jit.cpp:90:21: note: in expansion of macro ‘nvrtcGetTARGETSize’
     NVRTC_SAFE_CALL(nvrtcGetTARGETSize(prog, &targetSize));
                     ^~~~~~~~~~~~~~~~~~
<command-line>:0:16: error: ‘nvrtcGetCUBIN’ was not declared in this scope
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/include/utils_pe.h:6:26: note: in definition of macro ‘NVRTC_SAFE_CALL’
     nvrtcResult result = x;                                       \
                          ^
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/binders/nvrtc/nvrtc_jit.cpp:93:21: note: in expansion of macro ‘nvrtcGetTARGET’
     NVRTC_SAFE_CALL(nvrtcGetTARGET(prog, target));
                     ^~~~~~~~~~~~~~
<command-line>:0:16: note: suggested alternative: ‘nvrtcGetPTX’
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/include/utils_pe.h:6:26: note: in definition of macro ‘NVRTC_SAFE_CALL’
     nvrtcResult result = x;                                       \
                          ^
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/binders/nvrtc/nvrtc_jit.cpp:93:21: note: in expansion of macro ‘nvrtcGetTARGET’
     NVRTC_SAFE_CALL(nvrtcGetTARGET(prog, target));
                     ^~~~~~~~~~~~~~

OK
Starting inference for ROI 32
Loading data from: ./data/subjectsamples_longclean_dl_hmuse_allstudies.csv
Loading test IDs from: ./data/test_subject_allstudies_ids_dl_hmuse0.pkl
Loading model from: ./models/population_deep_kernel_gp_MUSE_32.pth
Loaded data with 11279 samples
Loaded 617 test subject IDs
Loading trained model...
Model loaded successfully with training data
Training data shape: torch.Size([8964, 151])
Training targets shape: torch.Size([8964])
depth [(151, 75)]
final layer (151, 75)
Final Layer 151 75
Preparing test data...
Test data shape: torch.Size([2315, 151])
Test Y ROI shape: torch.Size([2315])
Making predictions...

Inference Results for ROI 32:
MAE: 0.1544
MSE: 0.0539
RMSE: 0.2322
R²: 0.9484
Coverage: 0.9797
Interval Width: 1.3414
Results saved to: ./inference_results_rois/inference_results_roi_32.csv
Summary metrics saved to: ./inference_results_rois/inference_results_roi_32_summary.json
Inference completed successfully!
